--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,6 +59,10 @@ margin-top: 1.6rem;
  &.utility-layout {
   margin-top: 10rem;
  }
+
+ &.presentation-button {
+  margin: -2rem 0 0 auto;
+ }
 }
 
 .card {
