--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 $primary: #8d78c7;
 $primary-border: #6E42A5;
 $primary-hover: #7967aa;
+$primary-inactive: #dcd6ef;
 $primary-shadow: #7967aa;
 $white-hover: #EAEAEA;
 $white: #FFFFFF;
