--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -49,8 +49,16 @@ button, .button {
 
   &.circle {
     border-radius: 50%;
-    padding: 3rem 1.8rem;
+    padding: 35px 13px;
+    max-width: 97px;
   }
+}
+
+.continue {
+  position: absolute;
+  bottom: -30px;
+  right: -40px;
+  box-shadow: 2px 2px 8px 0 $primary-shadow;
 }
 
 input {
