--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -19,11 +19,11 @@
   &.difficulty-level {
     height: 100px;
     width: 100px;
-    border: 1px solid $white;
+    border: 3px solid $white;
 
     &:hover {
-      opacity: 0.7;
       cursor: pointer;
+      border: 3px solid $yellow;
     }
   }
 
@@ -31,6 +31,7 @@
     height: 100px;
     width: 100px;
     border: 2px solid $white;
+    padding: 10px;
 
     &.active {
       border: 4px solid $yellow;
@@ -42,9 +43,10 @@
   }
 
   &.winner {
-    width: 165px;
-    height: 165px;
+    width: 145px;
+    height: 145px;
     border: 6px solid $yellow;
+    padding: 10px;
   }
 }
 
@@ -62,15 +64,24 @@
   }
 
   &.indicator {
-  position: absolute;
+    position: absolute;
     width: 55px;
+    height: 55px;
     top: -15px;
     right: -16px;
+    display: flex;
 
-  &.active {
-    border: 3px solid $yellow;
+    &.active {
+      border: 3px solid $yellow;
+    }
+
+    &.inactive {
+      background: $primary-inactive;
+      border-color: $primary-inactive;
+
+      img {
+        opacity: 0.7;
+      }
+    }
   }
-
-  }
-
 }
