--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,180 +4,284 @@
 @import 'typography';
 @import 'media';
 @import 'forms';
-@import'difficulty-level';
+@import 'difficulty-level';
 @import 'game-field';
-
-
 
 
 *,
 *:before,
 *:after {
- box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
- font-size: 16px;
- width: 100%;
- height: 100%;
+  font-size: 16px;
+  width: 100%;
+  height: 100%;
 }
 
 body {
- width: 100%;
- height: 100%;
- background: $primary;
- font-family: 'Open Sans', sans-serif;
- font-size: 1rem;
- line-height: 1.5rem;
- color: $white;
+  width: 100%;
+  height: 100%;
+  background: $primary;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  color: $white;
 }
 
 .container {
- margin: 0 auto;
- height: 100%;
+  margin: 0 auto;
+  height: 100%;
 
- &.max-width-380 {
-  max-width: 380px;
- }
+  &.max-width-280 {
+    max-width: 280px;
+  }
 
- &.full-width {
-  margin: 0 16px;
- }
+  &.max-width-380 {
+    max-width: 380px;
+  }
 
- &.inset {
-  max-width: 350px;
- }
+  &.full-width {
+    margin: 0 16px;
+  }
 
- &.responsive {
-  max-width: 540px;
- }
+  &.inset {
+    max-width: 350px;
+  }
 
- &.game-layout {
-margin-top: 1.6rem;
- }
+  &.responsive {
+    max-width: 540px;
+  }
 
- &.utility-layout {
-  margin-top: 10rem;
- }
+  &.game-layout {
+    margin-top: 1.6rem;
+  }
 
- &.presentation-button {
-  margin: -2rem 0 0 auto;
- }
+  &.utility-layout {
+    margin-top: 10rem;
+  }
+
 }
 
 .card {
- padding: 2rem 0.8rem 2.2rem 0.8rem;
- margin-top: 150px;
- border-radius: 8px;
- background: $white;
- box-shadow: 1px 3px 4px 1px $primary-shadow;
+  padding: 2rem 0.8rem 2.2rem 0.8rem;
+  margin-top: 150px;
+  border-radius: 8px;
+  background: $white;
+  box-shadow: 1px 3px 4px 1px $primary-shadow;
 
 }
 
 .nav {
- display: flex;
- justify-content: space-between;
- align-items: center;
- padding-top: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 12px;
 }
 
 .fas {
- color: $white;
- margin: 0 0 14px 14px;
+  color: $white;
+  margin: 0 0 14px 14px;
 
- &:hover {
-  cursor: pointer;
-  color: $white-hover
- }
+  &:hover {
+    cursor: pointer;
+    color: $white-hover
+  }
 }
 
 .vertical-stack {
- display: flex;
- flex-direction: column;
- align-content: center;
- justify-content: center;
- gap: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  gap: 0.6rem;
 }
 
 ul.symbol-row {
- display: flex;
- justify-content: center;
- flex-wrap: wrap;
- margin-bottom: 1.5rem;
- gap: 0.5rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 1.5rem;
+  gap: 0.3rem;
 }
 
 .players-row {
- display: flex;
- justify-content: space-between;
- margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 
 .players-column {
- position: relative;
- width: 120px;
- align-items: center;
- align-content: center;
- text-align: center;
- height: auto;
+  position: relative;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  height: auto;
+}
+
+.game-history {
+  padding-left: 5px;
 }
 
 @media (max-width: 500px) {
- .logo-big {
-  max-width: 220px;
- }
+  .logo-big {
+    max-width: 220px;
+  }
 
- .pregame-margin-bottom {
-  margin-bottom: 6rem;
- }
+  .pregame-margin-bottom {
+    margin-bottom: 6rem;
+  }
 }
 
 @media (max-width: 300px) {
 
- .difficulty-level-row {
-  gap: 0.6rem;
-  margin-bottom: 1.8rem;
- }
+  .difficulty-level-row {
+    gap: 0.6rem;
+    margin-bottom: 1.8rem;
+  }
 
- .avatar-difficulty-level {
-  height: 75px;
-  width: 75px;
- }
+  .avatar-difficulty-level {
+    height: 75px;
+    width: 75px;
+  }
 }
 
-@media (max-width: 600px) {
- .container {
-  .responsive {
-   max-width: 360px;
+@media (max-width: 460px) {
+  .continue {
+    bottom: 13px;
+    right: 13px;
+    box-shadow: 0 1px 5px 0 $primary;
   }
- }
+}
 
- .field-square {
-  height: 120px;
- }
+@media (max-width: 1370px) {
+
+  .players-row {
+    justify-content: center;
+    gap: 6rem;
+    margin-bottom: 0.8rem;
+  }
+
+  .container {
+    .responsive {
+      max-width: 360px;
+    }
+  }
+
+  .field-square {
+    height: 120px;
+  }
+
+  .game-field {
+    .symbol {
+
+      height: 65px;
+      width: 65px;
+    }
+  }
+
+  .avatar.player {
+    height: 80px;
+    width: 80px;
+  }
+
+  .symbol.indicator {
+    width: 40px;
+    height: 40px;
+    top: -11px;
+    right: 3px
+  }
 }
 
 @media (max-width: 750px) {
+  .game-history {
+    gap: 0.5rem;
 
- .game-history {
-  gap: 0.5rem;
+    .game-field {
+      max-width: 120px;
+      max-height: 120px;
+      grid-template-columns: 40px 40px 40px;
+      grid-template-rows: 40px 40px 40px;
+      box-shadow: 0 6px 5px 1px $primary-shadow;
+
+      .symbol {
+        height: 30px;
+        width: 30px;
+      }
+
+      .field-square {
+        height: 40px;
+      }
+    }
+  }
+}
+
+@media (max-height: 700px) and (max-width: 400px) {
+  .container {
+    .responsive {
+      max-width: 300px;
+    }
+  }
+
+  .field-square {
+    height: 100px;
+  }
 
   .game-field {
-   max-width: 120px;
-   max-height: 120px;
-   grid-template-columns: 40px 40px 40px;
-   grid-template-rows: 40px 40px 40px;
-   box-shadow: 0 6px 5px 1px $primary-shadow;
+    .symbol {
 
-   .symbol {
-    height: 30px;
-    width: 30px;
-   }
-
-   .field-square {
-    height: 40px;
-
-   }
+      height: 60px;
+      width: 60px;
+    }
   }
- }
+
+  .players-row {
+    gap: 4rem;
+
+  }
+
+  .button {
+    &.continue {
+      bottom: 3px;
+      right: 3px;
+      box-shadow: 0 1px 5px 0 $primary;
+      font-size: 0.8rem;
+    }
+
+    &.circle {
+      padding: 28px 8px;
+      max-width: 81px;
+      bottom: -21px;
+      right: -28px;
+    }
+  }
+
 }
+
+@media (min-height: 670px) {
+  .game-field {
+    margin-bottom: 1.2rem;
+  }
+}
+
+@media (max-width: 300px) {
+  .container {
+    .responsive {
+      max-width: 270px;
+    }
+  }
+
+  .field-square {
+    height: 90px;
+  }
+
+  .game-field {
+    .symbol {
+
+      height: 50px;
+      width: 50px;
+    }
+  }
+}
+
