--- a/scss/main.css
+++ b/scss/main.css
@@ -295,7 +295,6 @@ input {
 
 .game-field {
   background: #FFFFFF;
-  box-shadow: 2px 7px 8px 3px #7967aa;
   border-radius: 8px;
   height: 100%;
   width: 100%;
@@ -321,8 +320,7 @@ input {
   align-items: center;
   justify-content: center; }
   .field-square.highlight {
-    background: #FFE245;
-    border-radius: 4px; }
+    background: #FFE245; }
   .field-square:hover {
     cursor: pointer; }
   .field-square.preview-1:hover .racoon {
@@ -337,7 +335,8 @@ input {
 .top-left {
   grid-area: top-left;
   border-right: 2px solid #EAEAEA;
-  border-bottom: 2px solid #EAEAEA; }
+  border-bottom: 2px solid #EAEAEA;
+  border-radius: 8px 0 0 0; }
 
 .top-center {
   grid-area: top-center;
@@ -346,7 +345,8 @@ input {
 
 .top-rightt {
   grid-area: top-rightt;
-  border-bottom: 2px solid #EAEAEA; }
+  border-bottom: 2px solid #EAEAEA;
+  border-radius: 0 8px 0 0; }
 
 .middle-left {
   grid-area: middle-left;
@@ -364,7 +364,8 @@ input {
 
 .bottom-left {
   grid-area: bottom-left;
-  border-right: 2px solid #EAEAEA; }
+  border-right: 2px solid #EAEAEA;
+  border-radius: 0 0 0 8px; }
 
 .bottom-center {
   grid-area: bottom-center;
@@ -381,8 +382,7 @@ input {
     max-width: 150px;
     max-height: 150px;
     grid-template-columns: 50px 50px 50px;
-    grid-template-rows: 50px 50px 50px;
-    box-shadow: 0 6px 5px 1px #7967aa; }
+    grid-template-rows: 50px 50px 50px; }
     .game-history .game-field .symbol {
       height: 35px;
       width: 35px; }
@@ -409,7 +409,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background: #8d78c7;
+  background: url("/dist/public/images/backgrounds/abstract-background-02.png") no-repeat center center/cover;
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
