--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background: $primary;
+  background: url("/dist/public/images/backgrounds/abstract-background-02.png") no-repeat center center/cover;
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
@@ -61,8 +61,10 @@ body {
   &.utility-layout {
     margin-top: 10rem;
   }
-
 }
+
+
+
 
 .card {
   padding: 2rem 0.8rem 2.2rem 0.8rem;
