--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@ $primary: #8d78c7;
 $primary-border: #6E42A5;
 $primary-hover: #7967aa;
 $primary-inactive: #dcd6ef;
-$primary-shadow: #7967aa;
+$primary-shadow: #7945b3;
 $white-hover: #EAEAEA;
 $white: #FFFFFF;
 $off-white: #F0f0f0;
