--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -59,6 +59,16 @@ button, .button {
   bottom: -30px;
   right: -40px;
   box-shadow: 2px 2px 8px 0 $primary-shadow;
+  }
+
+.home {
+  position: absolute;
+  border-radius: 50%;
+  padding: 35px 13px;
+  max-width: 97px;
+  bottom: 25px;
+  right: 25px;
+  box-shadow: 2px 2px 8px 0 $primary-shadow;
 }
 
 input {
