--- a/scss/_game-field.scss
+++ b/scss/_game-field.scss
@@ -11,6 +11,7 @@
   grid-template-rows: 1fr 1fr 1fr;
   margin-bottom: 0.5rem;
   position: relative;
+  box-shadow: 0 2px 9px 0 $primary-shadow;
 
 
   .symbol {
