--- a/scss/main.css
+++ b/scss/main.css
@@ -182,8 +182,11 @@ a {
   .avatar.player {
     height: 100px;
     width: 100px;
-    border: 2px solid #FFFFFF;
-    padding: 10px; }
+    border: 2px solid #FFFFFF; }
+    .avatar.player.animal {
+      padding: 10px; }
+    .avatar.player.robot {
+      padding: 2px; }
     .avatar.player.active {
       border: 4px solid #FFE245; }
     .avatar.player.inactive {
@@ -197,26 +200,13 @@ a {
 .symbol {
   width: 60px;
   background: #FFFFFF;
-  padding: 4px;
   border-radius: 50%;
   border: 3px solid #FFFFFF; }
+  .symbol.animal {
+    padding: 4px; }
   .symbol:hover {
     cursor: pointer;
     border-color: #FFE245; }
-  .symbol.indicator {
-    position: absolute;
-    width: 55px;
-    height: 55px;
-    top: -15px;
-    right: -16px;
-    display: flex; }
-    .symbol.indicator.active {
-      border: 3px solid #FFE245; }
-    .symbol.indicator.inactive {
-      background: #dcd6ef;
-      border-color: #dcd6ef; }
-      .symbol.indicator.inactive img {
-        opacity: 0.7; }
 
 button, .button {
   background: #FFFFFF;
@@ -261,7 +251,16 @@ button, .button {
   position: absolute;
   bottom: -30px;
   right: -40px;
-  box-shadow: 2px 2px 8px 0 #7967aa; }
+  box-shadow: 2px 2px 8px 0 #7945b3; }
+
+.home {
+  position: absolute;
+  border-radius: 50%;
+  padding: 35px 13px;
+  max-width: 97px;
+  bottom: 25px;
+  right: 25px;
+  box-shadow: 2px 2px 8px 0 #7945b3; }
 
 input {
   border-radius: 4px;
@@ -303,7 +302,8 @@ input {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   margin-bottom: 0.5rem;
-  position: relative; }
+  position: relative;
+  box-shadow: 0 2px 9px 0 #7945b3; }
   .game-field .symbol {
     height: 80px;
     width: 80px;
@@ -409,11 +409,18 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background: url("/dist/public/images/backgrounds/abstract-background-02.png") no-repeat center center/cover;
+  background: linear-gradient(138deg, #8e52aa 0%, #8c68db 59%, #8b68db 69%, #9b45b6 98%) no-repeat;
+  margin: 0;
+  background-attachment: fixed;
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
   color: #FFFFFF; }
+
+.splash-screen {
+  background: url("/dist/public/images/backgrounds/splash-screen-01.png") no-repeat center center/cover;
+  width: 100%;
+  height: 100%; }
 
 .container {
   margin: 0 auto;
@@ -438,7 +445,7 @@ body {
   margin-top: 150px;
   border-radius: 8px;
   background: #FFFFFF;
-  box-shadow: 1px 3px 4px 1px #7967aa; }
+  box-shadow: 1px 3px 4px 1px #7945b3; }
 
 .nav {
   display: flex;
@@ -491,17 +498,29 @@ ul.symbol-row {
 @media (max-width: 300px) {
   .difficulty-level-row {
     gap: 0.6rem;
-    margin-bottom: 1.8rem; }
+    margin-bottom: 0.4rem; }
 
   .avatar-difficulty-level {
     height: 75px;
-    width: 75px; } }
+    width: 75px; }
+
+  ul.symbol-row {
+    margin-bottom: 0.5rem; }
+
+  .nav {
+    margin-bottom: 1rem; }
+
+  .container.utility-layout {
+    margin-top: 5rem; } }
 @media (max-width: 460px) {
   .continue {
     bottom: 13px;
     right: 13px;
     box-shadow: 0 1px 5px 0 #8d78c7; } }
 @media (max-width: 1370px) {
+  .splash-screen {
+    background: url("/dist/public/images/backgrounds/splash-screen-02-02.png") no-repeat center center/cover; }
+
   .players-row {
     justify-content: center;
     gap: 6rem;
@@ -526,6 +545,9 @@ ul.symbol-row {
     height: 40px;
     top: -11px;
     right: 3px; } }
+@media (max-width: 920px) {
+  .splash-screen {
+    background: url("/dist/public/images/backgrounds/splash-screen-mobile-03-03.png") no-repeat center center/cover; } }
 @media (max-width: 750px) {
   .game-history {
     gap: 0.5rem; }
@@ -534,7 +556,7 @@ ul.symbol-row {
       max-height: 120px;
       grid-template-columns: 40px 40px 40px;
       grid-template-rows: 40px 40px 40px;
-      box-shadow: 0 6px 5px 1px #7967aa; }
+      box-shadow: 0 6px 5px 1px #7945b3; }
       .game-history .game-field .symbol {
         height: 30px;
         width: 30px; }
@@ -552,7 +574,7 @@ ul.symbol-row {
     width: 60px; }
 
   .players-row {
-    gap: 4rem; }
+    gap: 2rem; }
 
   .button.continue {
     bottom: 3px;
@@ -563,10 +585,17 @@ ul.symbol-row {
     padding: 28px 8px;
     max-width: 81px;
     bottom: -21px;
-    right: -28px; } }
+    right: -28px; }
+  .button.home {
+    bottom: 25px;
+    right: 25px; } }
 @media (min-height: 670px) {
   .game-field {
     margin-bottom: 1.2rem; } }
+@media (max-width: 400px) {
+  .avatar.difficulty-level {
+    height: 90px;
+    width: 90px; } }
 @media (max-width: 300px) {
   .container .responsive {
     max-width: 270px; }
@@ -576,6 +605,13 @@ ul.symbol-row {
 
   .game-field .symbol {
     height: 50px;
-    width: 50px; } }
+    width: 50px; }
+
+  .avatar.difficulty-level {
+    height: 80px;
+    width: 80px; }
+
+  .button.circle {
+    right: -12px; } }
 
 /*# sourceMappingURL=main.css.map */
